# Projet-Rubiks-Cube-C

./: CMakeLists.txt  CahierDesCharges.txt  enumTypesServices.c  enumTypesServices.h  main.c  movementsService.c  representationService.c  representationService.h  resolutionService.c  resolutionService.h  rubiks.c  rubiks.h
Headers/: enumTypesServices.h  movementsService.h  representationService.h  typedefs.h
Services/: conio.c  enumTypesServices.c  main.c  movementsService.c  representationService.c  resolutionService.c  rubiks.c
